--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Puppy Love</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
     <meta name="author" content="@PuppyLove">
     <!-- Open Graph-->
     <meta property="og:type" content="website">
@@ -22,10 +21,167 @@
     <meta name="twitter:image" content="images/banner.jpg">
     <meta name="twitter:title" content="Puppy Love | Centro de adopciones">
     <meta name="twitter:description" content="¡Visita nuestro centro de adopciones para encontrar una mascota y mucho amor!">
+    <!-- Bootstrap minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-
+    <header class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>PUPPY LOVE</h1>
+            </div>
+            <div class="col-md-12">
+                <p>ESTAMOS AQUÍ POR ELLOS</p>
+                <p>QUIENES SON PURO AMOR</p>
+            </div>
+            <div class="col-md-12">
+                <button class="btn">¡ADOPTA!</button>
+            </div>
+            <div id="leer-mas" class="hidden-xs col-md-12 leer-mas bounce-up">
+                <p class="mas">LEER MÁS</p>
+                <a class="mas" href="#"><img src="images/icons/arrow.svg" alt="flecha"></a>
+            </div>
+        </div>
+    </header>
+    <section id="nosotros">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3>SON EXCELENTES COMPAÑEROS</h3>
+                    <h3>¡TENEMOS MUCHOS DE ELLOS QUE ESPERAN CONOCERTE!</h3>
+                </div>
+                <div class="col-md-12">
+                    <p>Nosotros te ayudaremos a encontrar a un puppy love que sea compatible con tu estilo de vida.</p>
+                    <p>¡Visita nuestro centro de adopciones para encontrar a un pequeño amigo y mucho amor!</p>
+                </div>
+                <div class="col-md-12">
+                    <img src="images/icons/collar.svg" alt="collar">
+                    <img src="images/icons/bone.svg" alt="hueso">
+                    <img src="images/icons/pet-plate.svg" alt="plato">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="conoce">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-12 col-md-5">
+                    <img class="img-responsive left" src="images/pic01.jpg" alt="perros rescatados">
+                </div>
+                <div class="col-sm-12 col-md-7">
+                    <h4>Rescatados</h4>
+                    <p>Fueron rescatados del abandono o una mala crianza. Todos ellos han pasado por un proceso de socialización en los albergues, lo que garantiza su recuperación.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-7">
+                    <h4>Únicos</h4>
+                    <p>Todos son sobrevivientes, son héroes con historias y experiencias que lo hacen únicos.</p>
+                </div>
+                <div class="col-sm-12 col-md-5">
+                    <img class="img-responsive right" src="images/pic02.jpg" alt="perros únicos">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 col-md-5">
+                    <img class="img-responsive left" src="images/pic03.jpg" alt="perros rescatados">
+                </div>
+                <div class="col-sm-12 col-md-7">
+                    <h4>Nobles</h4>
+                    <p>Un Puppy Love agradecerá siempre poder compartir su vida a tu lado. Será un amigo fiel que te acompañará y alegrará tus días.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="informacion">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <h4>ACCUMSAN MUS TORTOR NUNC ALIQUET</h4>
+                </div>
+                <div class="col-md-12">
+                    <p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+                </div>
+            </div>
+            <div class="row block">
+                <div class="block-lilac block-lilac-1 col-xs-12 col-sm-6 col-md-6">
+                    <img src="images/icons/bone-rotate.svg" alt="Bone">
+                    <h5>Alimentación adecuada</h5>
+                    <p>Asegúrate que su dieta vaya acorde a su edad y peso. Es importante para una buena calidad de vida.</p>
+                </div>
+                <div class="block-lilac block-lilac-2 col-xs-12 col-sm-6 col-md-6">
+                    <img src="images/icons/pet-house.svg" alt="Pet house">
+                    <h5>Espacios idóneos</h5>
+                    <p>Proporciónale un espacio donde pueda jugar, descansar, desenvolverse y ser parte activa de la vida de tu familia.</p>
+                </div>
+            </div>
+            <div class="row block">
+                <div class="block-lilac block-lilac-3 col-xs-12 col-sm-6 col-md-6">
+                    <img src="images/icons/pet.svg" alt="Pet">
+                    <h5>Serán tus mejores amigos</h5>
+                    <p>Estarán contigo y serán parte de tu familia.</p>
+                </div>
+                <div class="block-lilac block-lilac-4 col-xs-12 col-sm-6 col-md-6">
+                    <img src="images/icons/track.svg" alt="Pet tracks">
+                    <h5>Puedes apadrinarlos</h5>
+                    <p>Son amistosos, educados y necesitan de tu apoyo.</p>
+                </div>
+            </div>
+            <div class="row block">
+                <div class="block-lilac block-lilac-5 col-xs-12 col-sm-6 col-md-6">
+                    <img src="images/icons/dog.svg" alt="Pet tracks">
+                    <h5>Son de gran beneficio para niños y adultos mayores</h5>
+                    <p>Siempre que se decida cuidar de ellos en consciencia.</p>
+                </div>
+                <div class="block-lilac block-lilac-6 col-xs-12 col-sm-6 col-md-6">
+                    <img src="images/icons/track-two.svg" alt="Pet tracks">
+                    <h5>Iplican una gran responsabilidad</h5>
+                    <p>Debemos tener en cuenta que adoptarlos supone una gran responsabilidad, costes económicos adicionales y una atención constante.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="adopta">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-md-6">
+                    <div class="col-md-12">
+                        <h4>ARCUE UT VEL COMMODO</h4>
+                    </div>
+                    <div class="col-md-12">
+                        <p>Aliquam ut ex ut augue consectetur interdum indreit imperdiet amet eleifend fringilla.</p>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6">
+                    <div class="col-md-12">
+                        <button id="adopt-btn" class="btn">ADOPTA</button>
+                    </div>
+                    <div class="col-md-12">
+                        <button id="learn-more-btn" class="btn">LEARN MORE</button>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <footer>
+        <div class="social">
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-instagram"></i>
+            <i class="fa fa-dribbble"></i>
+            <i class="fa fa-envelope-o"></i>
+        </div>
+    </footer>
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Bootstrap minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
